--- a/style.css
+++ b/style.css
@@ -4,12 +4,10 @@ body{
 .bayan{
     padding:30px;
     background:#fff;
-    float:left;
     width:500px;
     border-radius: 5px;
     box-sizing:border-box;
-    margin:10%;
-    box-shadow: 0 1.5em 85px 0 rgba(0, 0, 0, 0.2);
+    margin: 0 auto;
 }
 .bayan{
     font-family:'Open-sans',Arial,sans-serif;
@@ -28,5 +26,8 @@ body{
   }
   .close .bayan{
     height:0px;
+  }
+  .content{
+    margin: 0px 70px;
   }
   
