--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body{
 .bayan{
     font-family:'Open-sans',Arial,sans-serif;
 }
+.content img{
+    width: 269px;
+}
 .name{
     cursor:pointer;
     margin:0px 0px 10px 0px;
